[package]
name = "neon-serde"
version = "0.4.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
description = "Easily serialize object for use with neon"
license = "MIT"
repository = "https://github.com/GabrielCastro/neon-serde"
readme = "readme.md"

[dependencies]
serde = "1"
error-chain = "0.12"
# neon = { version = "0.7.1-napi", default-features = false, features = ["default-panic-hook", "napi-4", "event-queue-api", "try-catch-api"] }
neon = { version = "0.7.1-napi", default-features = false, features = ["default-panic-hook", "napi-6", "event-queue-api", "try-catch-api"] }

[dependencies.num]
version = "0.2"
default-features = false

[dev-dependencies]
serde_derive = "1"

[badges]
travis-ci = { repository = "GabrielCastro/neon-serde" }
